--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -31,7 +31,7 @@
 
     <header>
       <div class="header-left">
-        <div class="header-left-elements">
+        <div class="header-left-title">
           <h1>
             Innovation
             <br />
@@ -39,9 +39,9 @@
             <br />
             Demand
           </h1>
-
-          <a href="#" id="button">Get Started</a>
         </div>
+
+        <a href="#" id="button">Get Started</a>
       </div>
 
       <div class="header-right">
